# Aeset

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
aeset/: cli.py  launcher.py  scaffold.py
aeset/templates/: blank.aep
aeset/test-project/: README.md
aeset/test-project/project/: setup.jsx
