[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aeset"
version = "0.1.0"
description = "After Effects Project Scaffolding Tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "questionary",
]

[project.scripts]
aeset = "aeset.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aeset*"]
